--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,8 @@ build/
 !**/src/test/**/build/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
+.idea
+.idea/*.xml
 .idea/libraries/
 *.iws
 *.iml
